# Vagrant-Ubuntu

./: .gitignore  README.md
.old/del/vagrantfile/: __init__.py
.older/del/test/: broken.py
.package/: .gitignore  make_package.sh
old-vagrantai/: .pdm.toml  init.sh  pyproject.toml
old-vagrantai/src/: main.py
old-vagrantai/src/.test/: try.py
old-vagrantai/src/vagrantai/: __init__.py
old/Instance/: __init__.py
old/del/: main.py
old/del/template/: __init__.py
old/pyOop/Computer/: __init__.py
old/test/: broken.py
old/uni/: __init__.py
py/uniai/: pyproject.toml
py/uniai/src/: main.py
py/uniai/src/test_/: __init__.py
py/vagrant-ai/: init.sh
py/vagrant-ai/src/vagrant-ai/: __init__.py  main.py
pyOop/: main.py
python/: README.md  pyproject.toml
src/: main.py
src/.test/: __init__.py
src/Instance/: old.py
src/Vagrantfile/: __init__.py
src/fabric/: __init__.py
src/instance/: __init__.py
src/oldVagrantfile/: __init__.py
src/template/: __init__.py
src/this/: __init__.py
src/uni/: __init__.py
src/vagrantfile/: __init__.py
vagrant-ai/src/vagrant-ai/: main.py
vagrant-ai/src/vagrant-ai/ssh/: __init__.py
